--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: myapp:latest
+        image: localhost:5000/myapp:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
