--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,11 +6,10 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
+    - name: Log in to GitHub Container Registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Build & Push Docker Image
       run: |
-        docker build -t localhost:5000/myapp:latest .
-        docker push localhost:5000/myapp:latest
-    - name: Apply Kubernetes Manifests
-      run: |
-        kubectl apply -f deployment.yaml
-        kubectl apply -f service.yaml
+        docker build -t ghcr.io/${{ github.repository_owner }}/myapp:latest .
+        docker push ghcr.io/${{ github.repository_owner }}/myapp:latest
+    - name: Build & Push Docker Image
