--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,8 +7,8 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
     - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ogrowli --password-stdin
     - name: Build & Push Docker Image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/myapp:latest .
-        docker push ghcr.io/${{ github.repository_owner }}/myapp:latest
+        docker build -t ghcr.io/${{ github.repository_owner | toLower }}/myapp:latest .
+        docker push ghcr.io/${{ github.repository_owner | toLower }}/myapp:latest
