fixed actions file

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ permissions:
 jobs:
   terraform:
     name: "Terraform Apply"
-    ruens-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
