--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: localhost:5000/myapp:latest
+        image: ghcr.io/ogrowli/my-app:lates
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
