--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,7 +49,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     - name: update kubeconfig for EKS
-      run: aws eks update-kubeconfig --region us-east-1 --name myapp-cluster
+      run: aws eks update-kubeconfig --region us-east-1 --name my_cluster
     - name: Deploy to EKS
       run: |
           kubectl set image deployment/my-app my-app=ghcr.io/${{ env.REPO_OWNER }}/my-app:latest
