--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,5 +52,5 @@ jobs:
       run: aws eks update-kubeconfig --region us-east-1 --name my-cluster
     - name: Deploy to EKS
       run: |
-          kubectl set image deployment/my-app my-app=ghcr.io/${{ env.REPO_OWNER }}/my-app:latest
+          kubectl set image deployment/myapp my-app=ghcr.io/${{ env.REPO_OWNER }}/myapp:latest
           kubectl rollout status deployment/my-app
