--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,5 +52,7 @@ jobs:
       run: aws eks update-kubeconfig --region us-east-1 --name my-cluster
     - name: Deploy to EKS
       run: |
+          kubectl apply -f deployment.yaml
+          kubectl apply -f service.yaml
           kubectl set image deployment/myapp myapp=ghcr.io/${{ env.REPO_OWNER }}/myapp:latest
           kubectl rollout status deployment/myapp
